# Task_Manager

./: .Makefile.swp  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
staticfiles/: staticfiles.json
task_manager/: .settings.py.swm  .settings.py.swn  .settings.py.swo  .settings.py.swp  .views.py.swp  __init__.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py  0003_alter_label_options.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_date_joined_alter_status_name.py  0003_alter_status_date_joined.py  0004_alter_status_date_joined.py  0005_alter_status_date_joined.py  0006_alter_status_date_joined.py  0007_alter_status_date_joined.py  0008_alter_status_date_joined.py  0009_rename_date_joined_status_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_name.py  0002_alter_task_labels_alter_taskrelationlabel_label.py  0002_initial.py  0003_alter_task_executor.py  0004_alter_task_executor.py  0005_alter_task_description_alter_task_executor.py  0006_alter_task_description_alter_task_executor.py  (+1 more)
task_manager/templates/: index.html  layout.html  login.html
task_manager/users/: .models.py.swp  .views.py.swl  .views.py.swm  .views.py.swn  .views.py.swo  .views.py.swp  admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+52 files in other folders)
